<resources>
    <string name="app_name">Blog</string>
    <string name="login_title">Blog</string>
    <string name="register_title">Register</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="password_confirm_hint">Confirm Password</string>
    <string name="login_button">Log In</string>
    <string name="register_button">Register</string>
    <string name="no_account">Don\'t have an account? Register</string>
    <string name="have_account">Already have an account? Log In</string>
    <string name="posts_empty">No posts yet</string>
    <string name="comments_empty">No comments yet</string>
    <string name="new_post">New Post</string>
    <string name="edit_post">Edit Post</string>
    <string name="post_title_hint">Title</string>
    <string name="post_content_hint">Post content</string>
    <string name="category_label">Category</string>
    <string name="save">Save</string>
    <string name="send">Send</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Log Out</string>
    <string name="categories">Categories</string>
    <string name="search_hint">Search…</string>
    <string name="all_categories">All</string>
    <string name="write_comment_hint">Write a comment…</string>
    <string name="confirm_delete_post">Delete this post?</string>
    <string name="confirm_delete_category">Delete this category?</string>
    <string name="add_category_title">Add Category</string>
    <string name="action_label">Action</string>
    <string name="login_error">Invalid username or password</string>
    <string name="register_success">Registration successful</string>
    <string name="error_short_username">Username must be at least 3 characters</string>
    <string name="error_username_exists">A user with this name already exists</string>
    <string name="error_passwords_mismatch">Passwords do not match</string>
    <string name="error_fields_empty">Please fill in all fields</string>
    <string name="error_title_empty">Please enter a title</string>
    <string name="error_content_empty">Please enter post content</string>
    <string name="category_name_hint">Category name</string>
    <string name="ok">OK</string>
    <string name="comments_section">Comments</string>
    <string name="confirm_delete">Confirm Delete</string>
</resources>
